# rshell-lang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ast.c  ast.h  classes.c  classes.h  cmds.c  cmds.h  expr.c  expr.h  header.h  mem.c  mem.h  nativeroutines.c  nativeroutines.h  notes.txt  parser.c  parser.h  rfunction.c  rfunction.h  rsarray.c  rsarray.h  rsshell.c  rsshell.h  rstack.c  rstack.h  trie.c  trie.h  vtable.c  vtable.h
tests/: 01.c  CMakeLists.txt  test.shell  test10.shell  test11.shell  test12.shell  test13.shell  test14.shell  test15.shell  test16.shell  test2.shell  test3.shell  test4.shell  test5.shell  test6.shell  test7.shell  test9.shell  types.shell
